# kafklient

./: .gitignore  CLAUDE.md  README.md  benchmark.py  docker-compose.yml  pyproject.toml  test.py
.claude/: settings.local.json
kafklient/: __init__.py  _logging.py
kafklient/clients/: __init__.py  base_client.py  listener.py  rpc.py
kafklient/tests/: __main__.py  _config.py  _utils.py  benchmark.py  test_async_parsers.py  test_base_client.py  test_broadcaster.py  test_broker.py  test_edge_cases.py  test_kafka_listener.py  test_kafka_rpc.py
kafklient/types/: __init__.py  backend.py  config.py
kafklient/utils/: __init__.py  broadcaster.py  broker.py  executor.py  task.py
sdml/kafka_client/clients/: base_client.py  rpc.py
src/kafklient/: __init__.py  _logging.py  cli.py
src/kafklient/clients/: __init__.py  base_client.py  listener.py  rpc.py
src/kafklient/mcp/: __init__.py  _config.py  _utils.py  client.py  server.py  session.py
src/kafklient/tests/: _schema.py  _utils.py  test_base_client.py  test_edge_cases.py  test_kafka_listener.py  test_kafka_rpc.py  test_mcp_kafka_bridge.py
src/kafklient/types/: __init__.py  backend.py  config.py  parser.py
src/kafklient/utils/: broadcaster.py  executor.py  task.py
tests/: __init__.py  __main__.py  _config.py  _utils.py  benchmark.py  test_async_parsers.py  test_base_client.py  test_broadcaster.py  test_edge_cases.py  test_kafka_listener.py  test_kafka_rpc.py  test_mcp_client_session_helpers.py  test_mcp_kafka_advanced_features.py  test_mcp_kafka_bridge.py
